Fixed problems with hotspots was kept scaled on iOS

--- a/css/image-hotspots.css
+++ b/css/image-hotspots.css
@@ -30,7 +30,7 @@
   -webkit-transform: scale(1.5); /* Chrome, Safari, Opera */
   transform: scale(1.5);
 }
-.h5p-image-hotspot:hover {
+.not-an-ios-device .h5p-image-hotspot:hover {
   cursor: pointer;
   -ms-transform: scale(1.5); /* IE 9 */
   -webkit-transform: scale(1.5); /* Chrome, Safari, Opera */
